--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Environments
-w2
-
 # the data folder
 data/
 
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
+
+airflow/logs/
+airflow/.env
